--- a/debian/dnscrypt-wrapper.8
+++ b/debian/dnscrypt-wrapper.8
@@ -1,4 +1,10 @@
 '\" t
 .\"     Title: useradd
 .\"    Author: Aurelien Requiem
-.\" Generator: DocBook XSL
+.\" Generator: DocBook XSL Stylesheets v1.78.1 <http://docbook.sf.net/>
+.\"      Date: 11/18/2015
+.\"    Manual: System Management Commands
+.\"    Source: shadow-utils 4.2
+.\"  Language: English
+.\"
+.TH "DNSCRYPT-WRAPPER" "
