--- a/debian/dnscrypt-wrapper.8
+++ b/debian/dnscrypt-wrapper.8
@@ -7,4 +7,7 @@
 .\"    Source: shadow-utils 4.2
 .\"  Language: English
 .\"
-.TH "DNSCRYPT-WRAPPER" "
+.TH "DNSCRYPT-WRAPPER" "8" "December 26th, 2016" "Debian GNU/Linux" "Admin Manual"
+.\" -----------------------------------------------------------------
+.\" * Define some portability stuff
+.\" -------
