--- a/debian/dnscrypt-wrapper.8
+++ b/debian/dnscrypt-wrapper.8
@@ -24,4 +24,8 @@
 .nh
 .\" disable justification (adjust text to left margin only)
 .ad l
-.\
+.\" -----------------------------------------------------------------
+.\" * MAIN CONTENT STARTS HERE *
+.\" -----------------------------------------------------------------
+.SH "NAME"
+dnscrypt\-wrapper \- 
