Update pytest from 4.4.0 to 4.4.1

--- a/debian/dnscrypt-wrapper.8
+++ b/debian/dnscrypt-wrapper.8
@@ -28,4 +28,13 @@
 .\" * MAIN CONTENT STARTS HERE *
 .\" -----------------------------------------------------------------
 .SH "NAME"
-dnscrypt\-wrapper \- 
+dnscrypt\-wrapper \- Creates an empty website template almost ready for deployment.
+.SH SYNOPSIS
+.B dnscrypt\-wrapper
+.RB [\| \-h \|]
+.RB [\| \-a
+.IR <str> \|]
+.RB [\| \-r
+.IR <str> \|]
+.RB [\| \-U \|]
+.RB [\| \
