Gitweb: make line number toggling work for Firefox and Safari

--- a/debian/dnscrypt-wrapper.8
+++ b/debian/dnscrypt-wrapper.8
@@ -37,4 +37,15 @@ dnscrypt\-wrapper \- Creates an empty website template almost ready for deployme
 .RB [\| \-r
 .IR <str> \|]
 .RB [\| \-U \|]
-.RB [\| \
+.RB [\| \-u
+.IR <str> \|]
+.RB [\| \-l
+.IR <str> \|]
+.RB [\| \-p
+.IR <str> \|]
+.RB [\| \-d \|]
+.RB [\| \-V \|]
+.RB [\| \-v \|]
+.RB [\| \-\-gen-cert-file \|]
+.RB [\| \-\-gen-crypt-keypair \|]
+.RB [\| \-\-gen-provider
