--- a/debian/dnscrypt-wrapper.8
+++ b/debian/dnscrypt-wrapper.8
@@ -48,4 +48,8 @@ dnscrypt\-wrapper \- Creates an empty website template almost ready for deployme
 .RB [\| \-v \|]
 .RB [\| \-\-gen-cert-file \|]
 .RB [\| \-\-gen-crypt-keypair \|]
-.RB [\| \-\-gen-provider
+.RB [\| \-\-gen-provider-keypair \|]
+.RB [\| \-\-show-provider-publickey-fingerprint \|]
+.RB\fB [\| \-\-provider-cert-file=\fR\&\fI<str>\fR \|]
+.RB\fB [\| \-\-provider-name=\fR\&\fI<str>\fR \|]
+.RB\fB [\| \-\-prov
