update translation stats

--- a/debian/dnscrypt-wrapper.8
+++ b/debian/dnscrypt-wrapper.8
@@ -52,4 +52,7 @@ dnscrypt\-wrapper \- Creates an empty website template almost ready for deployme
 .RB [\| \-\-show-provider-publickey-fingerprint \|]
 .RB\fB [\| \-\-provider-cert-file=\fR\&\fI<str>\fR \|]
 .RB\fB [\| \-\-provider-name=\fR\&\fI<str>\fR \|]
-.RB\fB [\| \-\-prov
+.RB\fB [\| \-\-provider-publickey-file=\fR\&\fI<str>\fR \|]
+.RB\fB [\| \-\-provider-secretkey-file=\fR\&\fI<str>\fR \|]
+.RB\fB [\| \-\-crypt-secretkey-file=\fR\&\fI<str>\fR \|]
+.RB\fB [\| \-\-cert-file-expire-days=\fR\&\fI<int>
