--- a/debian/dnscrypt-wrapper.8
+++ b/debian/dnscrypt-wrapper.8
@@ -55,4 +55,9 @@ dnscrypt\-wrapper \- Creates an empty website template almost ready for deployme
 .RB\fB [\| \-\-provider-publickey-file=\fR\&\fI<str>\fR \|]
 .RB\fB [\| \-\-provider-secretkey-file=\fR\&\fI<str>\fR \|]
 .RB\fB [\| \-\-crypt-secretkey-file=\fR\&\fI<str>\fR \|]
-.RB\fB [\| \-\-cert-file-expire-days=\fR\&\fI<int>
+.RB\fB [\| \-\-cert-file-expire-days=\fR\&\fI<int>\fR \|]
+
+
+.SH DESCRIPTION
+.BR dnscrypt\-wrapper
+DNSCrypt is a protocol that authenticates communications between a DNS client and a DNS resolver. It prevents DNS spoofing. It uses cryptographic
