--- a/debian/dnscrypt-wrapper.8
+++ b/debian/dnscrypt-wrapper.8
@@ -60,4 +60,10 @@ dnscrypt\-wrapper \- Creates an empty website template almost ready for deployme
 
 .SH DESCRIPTION
 .BR dnscrypt\-wrapper
-DNSCrypt is a protocol that authenticates communications between a DNS client and a DNS resolver. It prevents DNS spoofing. It uses cryptographic
+DNSCrypt is a protocol that authenticates communications between a DNS client and a DNS resolver. It prevents DNS spoofing. It uses cryptographic signatures to verify that responses originate from the chosen DNS resolver and haven't been tampered with.
+
+.SH OPTIONS
+.TP
+\fB\-h\fR, \fB\--help\fR,
+.RS 4
+Display dnscry
