--- a/debian/dnscrypt-wrapper.8
+++ b/debian/dnscrypt-wrapper.8
@@ -66,4 +66,12 @@ DNSCrypt is a protocol that authenticates communications between a DNS client an
 .TP
 \fB\-h\fR, \fB\--help\fR,
 .RS 4
-Display dnscry
+Display dnscrypt\-wrapper help message and exit.
+.RE
+.TP
+\fB\-a\fR\ \&\fI<str>\fR, \fB\-\-listen-address=\fR\&\fI<str>\fR
+.RS 4
+Set local address to listen (default: 0.0.0.0:53).
+.RE
+.TP
+\fB\fR\ \&\fI<str>\-r\fR, \fB\-\-reso
