Removed some unused code

--- a/debian/dnscrypt-wrapper.8
+++ b/debian/dnscrypt-wrapper.8
@@ -74,4 +74,11 @@ Display dnscrypt\-wrapper help message and exit.
 Set local address to listen (default: 0.0.0.0:53).
 .RE
 .TP
-\fB\fR\ \&\fI<str>\-r\fR, \fB\-\-reso
+\fB\fR\ \&\fI<str>\-r\fR, \fB\-\-resolver\-address=\fR\&\fI<str>\fR
+.RS 4
+Set the upstream dns resolver server (<address:port>).
+.RE
+.TP
+\fB\-U\fR, \fB\-\-unauthenticated\fR
+.RS 4
+Allow and forward unauthenticated queries (default: off)
