--- a/debian/dnscrypt-wrapper.8
+++ b/debian/dnscrypt-wrapper.8
@@ -81,4 +81,14 @@ Set the upstream dns resolver server (<address:port>).
 .TP
 \fB\-U\fR, \fB\-\-unauthenticated\fR
 .RS 4
-Allow and forward unauthenticated queries (default: off)
+Allow and forward unauthenticated queries (default: off).
+.RE
+.TP
+\fB\-u\fR\ \&\fI<str>\fR, \fB\-\-user=\fR\&\fI<str>\fR
+.RS 4
+Run the service as given user.
+.RE
+.TP
+\fB\-l\fR\ \&\fI<str>\fR, \fB\-\-logfile=\fR\&\fI<str>\fR
+.RS 4
+Logs file path (def
