--- a/debian/dnscrypt-wrapper.8
+++ b/debian/dnscrypt-wrapper.8
@@ -91,4 +91,14 @@ Run the service as given user.
 .TP
 \fB\-l\fR\ \&\fI<str>\fR, \fB\-\-logfile=\fR\&\fI<str>\fR
 .RS 4
-Logs file path (def
+Logs file path (default: stdout).
+.RE
+.TP
+\fB\-p\fR\ \&\fI<str>\fR, \fB\-\-pidfile=\fR\&\fI<str>\fR
+.RS 4
+Pid file path (default: none).
+.RE
+.TP
+\fB\-d\fR, \fB\-\-daemonize\fR
+.RS 4
+Run as daemon (default: off).
