--- a/debian/dnscrypt-wrapper.8
+++ b/debian/dnscrypt-wrapper.8
@@ -102,3 +102,14 @@ Pid file path (default: none).
 \fB\-d\fR, \fB\-\-daemonize\fR
 .RS 4
 Run as daemon (default: off).
+.RE
+.TP
+\fB\-V\fR, \fB\-\-verbose\fR
+.RS 4
+Set the service to be more verbose. Specify more \-VVV to increase verbosity.
+.RE
+.TP
+\fB\-v\fR, \fB\-\-version\fR
+.RS 4
+Show version info and exit.
+.RE
