basic project structure

--- a/debian/dnscrypt-wrapper.8
+++ b/debian/dnscrypt-wrapper.8
@@ -113,3 +113,18 @@ Set the service to be more verbose. Specify more \-VVV to increase verbosity.
 .RS 4
 Show version info and exit.
 .RE
+.TP
+\fB\-\-gen\-cert\-file\fR
+.RS 4
+Generate pre\-signed certificate
+.RE
+.TP
+\fB\-\-gen\-crypt\-keypair\fR
+.RS 4
+Generate crypt key pair
+.RE
+.TP
+\fB\-\-gen\-provider\-keypair\fR
+.RS 4
+Generate provider key pair
+.R
