--- a/debian/dnscrypt-wrapper.8
+++ b/debian/dnscrypt-wrapper.8
@@ -127,4 +127,13 @@ Generate crypt key pair
 \fB\-\-gen\-provider\-keypair\fR
 .RS 4
 Generate provider key pair
-.R
+.RE
+.TP
+\fB\-\-show\-provider\-publickey\-fingerprint\fR
+.RS 4
+Display provider public key fingerprint
+.RE
+.TP
+\fB\-\-provider\-cert\-file=\fR\&\fI<str>\fR
+.RS 4
+Certificate file (default: ./dnscrypt.cert)
