--- a/debian/dnscrypt-wrapper.8
+++ b/debian/dnscrypt-wrapper.8
@@ -137,3 +137,16 @@ Display provider public key fingerprint
 \fB\-\-provider\-cert\-file=\fR\&\fI<str>\fR
 .RS 4
 Certificate file (default: ./dnscrypt.cert)
+.RE
+.TP
+\fB\-\-provider\-name=\fR\&\fI<str>\fR
+.RS 4
+Provider name.
+.RE
+.TP
+\fB\-\-provider\-publickey\-file=\fR\&\fI<str>\fR
+.RS 4
+Provider public key file (default: ./public.key).
+.RE
+.TP
+\fB\-\-provide
