Fix segmentation fault

--- a/debian/dnscrypt-wrapper.8
+++ b/debian/dnscrypt-wrapper.8
@@ -149,4 +149,11 @@ Provider name.
 Provider public key file (default: ./public.key).
 .RE
 .TP
-\fB\-\-provide
+\fB\-\-provider\-secretkey\-file=\fR\&\fI<str>\fR
+.RS 4
+Provider secret key file (default: ./secret.key).
+.RE
+.TP
+\fB\-\-crypt\-secretkey\-file=\fR\&\fI<str>\fR
+.RS 4
+Crypt secret key file (default: ./crypt_secret.key).
