--- a/debian/dnscrypt-wrapper.8
+++ b/debian/dnscrypt-wrapper.8
@@ -157,3 +157,12 @@ Provider secret key file (default: ./secret.key).
 \fB\-\-crypt\-secretkey\-file=\fR\&\fI<str>\fR
 .RS 4
 Crypt secret key file (default: ./crypt_secret.key).
+.RE
+.TP
+\fB\-\-cert\-file\-expire\-days=\fR\&\fI<int>\fR
+.RS 4
+cert file expire days (default: 365).
+.PP
+.
+.SH "SEE ALSO"
+\fBdnscrypt-proxy\fR(8)
